crates/strider-analyze/tests/snapshots/v3__x86__arithmetic__sdiv.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Srem:u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x20:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="ShiftRight:u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x20:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "3" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Sdiv:u64", shape=box, fillcolor="#2d2d2d"];
  "8" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
